--- a/project/1_打码器/index.html
+++ b/project/1_打码器/index.html
@@ -3,19 +3,257 @@
 <head>
     <meta charset="UTF-8">
     <title>打码器</title>
+    <script src="./alert-win.js"></script>
+    <!-- 全局样式 -->
     <style>
         * {
             padding: 0;
             margin: 0;
         }
-        body{
+
+        body {
             height: 100vh;
             width: 100vw;
-            background-color: antiquewhite;
+            overflow: hidden;
+            background-image: linear-gradient(45deg, #FFCDD2, #B3E5FC);
+        }
+
+        .add-box {
+            color: #cccccc;
+            border: 5px dashed;
+            position: relative;
+        }
+
+        .add-box:before {
+            content: '';
+            border-top: 10px solid;
+            width: 40%;
+            max-width: 100px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .add-box:after {
+            content: '';
+            border-left: 10px solid;
+            height: 40%;
+            max-height: 100px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+    <!-- 顶部选择菜单 -->
+    <style>
+        .top-menu {
+            z-index: 2;
+            background-color: rgba(0, 0, 0, .4);
+            height: 50vh;
+            width: 50vw;
+            position: absolute;
+            transition: background-color 1s ease,
+            color 1s ease,
+            font-size 1s ease,
+            left 1s ease,
+            right 1s ease,
+            top 1s ease,
+            bottom 1s ease;
+            text-align: center;
+            line-height: 50vh;
+            color: rgba(255, 255, 255, .5);
+            font-size: 3vh;
+            font-weight: 900;
+            cursor: pointer;
+            opacity: .7;
+            border: 1px solid rgba(0, 0, 0, .1);
+            box-sizing: border-box;
+        }
+
+        .top-menu:nth-of-type(1) {
+            left: 0;
+            top: 0;
+        }
+
+        .choice1 {
+            left: -100% !important;
+            top: -100% !important;
+        }
+
+        .top-menu:nth-of-type(2) {
+            right: 0;
+            top: 0;
+        }
+
+        .choice2 {
+            right: -100% !important;
+            top: -100% !important;
+        }
+
+        .top-menu:nth-of-type(3) {
+            left: 0;
+            bottom: 0;
+        }
+
+        .choice3 {
+            left: -100% !important;
+            bottom: -100% !important;
+        }
+
+        .top-menu:nth-of-type(4) {
+            right: 0;
+            bottom: 0;
+        }
+
+        .choice4 {
+            right: -100% !important;
+            bottom: -100% !important;
+        }
+
+        .top-menu:hover {
+            background-color: rgba(255, 255, 255, .2);
+            color: rgba(0, 0, 0, .5);
+            font-size: 4vh;
+        }
+
+        .top-menu:active {
+            opacity: 1;
+        }
+
+        #top-menu-btn {
+            position: absolute;
+            top: 85%;
+            left: 85%;
+            border: 4px solid #ffffff;
+            height: 40px;
+            width: 40px;
+            border-radius: 50%;
+            padding: 7px;
+            background-color: #ffffff;
+            opacity: 0;
+            z-index: 1;
+            background-clip: content-box;
+            cursor: pointer;
+        }
+
+        .top-menu-btn-static {
+            transition: opacity 1s ease, transform 1s ease;
+        }
+
+        .top-menu-btn-static:hover {
+            opacity: .7;
+            transform: scale(1.1);
+        }
+
+        .top-menu-btn-static:active {
+            transform: scale(1.1) scale(0.5);
+        }
+    </style>
+    <!-- 分类器 -->
+    <style>
+        .classify-box {
+            position: absolute;
+            height: 100%;
+        }
+
+        .classify-left {
+            width: calc(100vw - 300px);
+            left: -100%;
+            transition: left 1s ease;
+        }
+
+        .classify-right {
+            width: 300px;
+            right: -100%;
+            background-color: rgba(0, 0, 0, .3);
+            overflow: hidden;
+            transition: right 1s ease;
+        }
+
+        .classify-left-add-box {
+            height: 500px;
+            width: 500px;
         }
     </style>
 </head>
 <body>
+<!-- 顶部选择菜单 -->
+<div class="top-menu">字符标注</div>
+<div class="top-menu">图片分类</div>
+<div class="top-menu">滑块标注</div>
+<div class="top-menu">点选标注</div>
+<div id="top-menu-btn" class="top-menu-btn-static" draggable="true"></div>
+<script>
+    var
+        hasChoice = null,
+        hasChoiceBool = false,
+        topMenus = document.querySelectorAll('.top-menu'),
+        topMenuBtn = document.querySelector('#top-menu-btn'),
+        addChoice = () => {
+            topMenuBtn.style.opacity = '0.5';
+            topMenus.forEach((_menu, _index) => _menu.classList.add(`choice${_index + 1}`))
+        },
+        removeChoice = () => {
+            if (hasChoice !== null) {
+                switch (hasChoice) {
+                    case 0:
+                        break;
+                    case 1:
+                        classifyLeft.style.left = '-100%';
+                        classifyRight.style.right = '-100%';
+                        break;
+                }
+                hasChoice = null;
+            }
+            topMenus.forEach((_menu, _index) => _menu.classList.remove(`choice${_index + 1}`))
+        },
+        classifyLeft = document.querySelector('.classify-left'),
+        classifyRight = document.querySelector('.classify-right');
+</script>
+<script>
+    topMenus.forEach((menu, index) => {
+        menu.addEventListener('click', (e) => {
+            e.preventDefault();
+            if (hasChoiceBool) return;
+            hasChoiceBool = true;
+            if (index === 1) {
+                hasChoice = index;
+                classifyLeft.style.left = '0';
+                classifyRight.style.right = '0';
+            }
+            setTimeout(addChoice, 300);
+        })
+    });
+    topMenuBtn.ondragstart = function (e) {
+        this.classList.remove('top-menu-btn-static');
+    };
+    topMenuBtn.ondragend = function (e) {
+        this.classList.add('top-menu-btn-static');
+        topMenuBtn.style.left = `${e.clientX - 20}px`;
+        topMenuBtn.style.top = `${e.clientY - 20}px`;
+    };
+    document.body.ondragover = e => {
+        e.preventDefault();
+    };
+    topMenuBtn.addEventListener('click', function () {
+        this.style.opacity = '0';
+        hasChoiceBool = false;
+        setTimeout(removeChoice, 300);
+    })
+</script>
+<!-- 打码器 -->
 
+<!-- 分类器 -->
+<div class="classify-box classify-left">
+    <div class="add-box classify-left-add-box"></div>
+</div>
+<div class="classify-box classify-right"></div>
+<script>
+    var
+        classifyLeft = document.querySelector('.classify-left'),
+        classifyRight = document.querySelector('.classify-right');
+</script>
 </body>
 </html>
